--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
-          gunicorn -w 4 -b 0.0.0.0:$PORT Data a Dash.py:app.server
-    
+          gunicorn -w 4 -b 0.0.0.0:$PORT DataDash:app.server
+
 
